# mill-emulation

./: .readme  readme.md
src/: CMakeLists.txt  Makefile  board.cpp  board.h  bruteforce.h  main.cpp  position.cpp  position.h  tests.cpp  tests.h
tests/: CMakeLists.txt  tests_board.cpp  tests_board.h  tests_main.cpp
